# testforge

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONSOLIDACAO-SUMMARY.md  README.md  activate.sh  pyproject.toml  requirements.txt  setup.sh  testforge-recorder.bat  testforge-recorder.desktop  testforge_plano_sprints_correcao_bugs_piloto.md  testforge_plano_sprints_correcao_bugs_piloto.md.b64  testforge_update.yml
.claude/: settings.local.json
.githooks/: commit-msg  post-commit  pre-commit
.planning/: ANGULAR_COMPONENT_PLAN.md  BACKLOG.md  BUG-FIX-PLAN.md  CONSOLIDATION-SPRINT.md  DEBT-INVENTORY.md  DECISIONS-LOG.md  EPICOS-STORIES.md  EVIDENCE-ANALYSIS.md  MARKET-SCAN.md  MIGRATION-ARCHITECTURE-PLAN.md  NEXT-SESSION.md  PROJECT.md  RECORDING-FINGERPRINTS-AUDIT.md  REFACTOR-SPRINT.md  REGRESSION-PATTERNS.md  REQUIREMENTS.md  ROADMAP.md  SPRINT-PLANNING.md  STATE.md  TELEMETRY-PLAN.md  config.json  failure-counts.json  healing-catalog.jsonl  prompt-pack-v0.2.0.md  prompt-pack-v0.3.0.md  research-modern-healing-tools.md
.ralphy/: PRD.md  config.yaml  prd-fases.json  prd-simples.json  prd.json  progress.txt
.testforge/: config.yml  config.yml.example
_bmad/: config.toml  config.user.toml
adrs/: ADR-0001-shadow-mode-before-auto-heal.md  ADR-0002-alert-only-sensitive-data.md  ADR-0003-semantic-test-case-source-of-truth.md  ADR-006-phase-b-evidence-consumption.md
bug_lab/: README.md  REPORT.md  TEST-CASES.md  conftest.py
conhecimento_ancestral/: INDEX.md  pasta_origem.b64.txt
docs/: 2026-06-18-registro-diario.md  ARCHITECTURE-V2.md  BUG-FIX-PLAN-v2.md  (+16 more)
(+2669 files in other folders)
