[project]
name = "testforge"
version = "0.1.0"
description = "Gravador inteligente de testes E2E com self-healing deterministico"
requires-python = ">=3.10"
dependencies = [
    "playwright>=1.40",
    "pyyaml>=6.0",
    "typer>=0.9",
]

[project.scripts]
testforge = "testforge.cli.app:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-playwright>=0.4",
]
