[project]
name = "testforge"
version = "0.4.2"
description = "Gravador inteligente de testes E2E com self-healing deterministico"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "playwright>=1.40",
    "pyyaml>=6.0",
    "typer>=0.9",
]

[project.scripts]
testforge = "testforge.cli.app:main"
testforge-gui = "testforge.gui.recorder_launcher:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-playwright>=0.4",
]

[tool.setuptools.package-data]
testforge = ["config/*.yaml", "recorder/overlay_inject.js"]

[tool.pytest.ini_options]
testpaths = [
    "tests",
    "bug_lab",
]
pythonpath = ["src", "."]
norecursedirs = [
    "docs/conhecimento_ancestral",
    ".venv",
    "node_modules",
    ".git",
    "_bmad-output",
    "_bmad",
    ".ralphy-worktrees",
    ".ralphy-sandboxes",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
